Add dependencia Spring JDBC e config no application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/api-ecommerce
 spring.datasource.username=postgres
 spring.datasource.password=lucarauj
+spring.jpa.hibernate.ddl-auto=update
